[gd_scene load_steps=3 format=3 uid="uid://bd2kwrjhru20s"]

[ext_resource type="Script" uid="uid://78kmrbam2v85" path="res://Scenes/ui/card_tooltip_popup.gd" id="1_q28gk"]
[ext_resource type="PackedScene" uid="uid://d0b7aa31jdru4" path="res://Scenes/ui/card_menu_ui.tscn" id="2_jn8ll"]

[node name="CardTooltipPopup" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_q28gk")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.733333)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = -29.0
offset_right = 75.0
offset_bottom = 29.0
grow_horizontal = 2
grow_vertical = 2

[node name="TooltipCard" type="CenterContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="CardMenuUI" parent="VBoxContainer/TooltipCard" instance=ExtResource("2_jn8ll")]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
alignment = 1

[node name="ShowUpgradeButton" type="Button" parent="VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 4
text = "Show Upgrade"

[node name="HideUpgradeButton" type="Button" parent="VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 4
text = "Hide Upgrade"

[node name="CardDescription" type="RichTextLabel" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
mouse_filter = 2
bbcode_enabled = true
text = "Card Description Card Description Card Description Card Description Card Description Card 
Description Card Description "
fit_content = true
horizontal_alignment = 1

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/ShowUpgradeButton" to="." method="_on_show_upgrade_button_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/HideUpgradeButton" to="." method="_on_hide_upgrade_button_pressed"]
